08-06-2025 ... 0.8.0.1 ... Fix PV Table
08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
08-08-2025 ... 0.8.0.3 ... Move UCI into Interface Object
08-09-2025 ... 0.8.0.4 ... Alias Search Functions, Soft Node Limit
08-09-2025 ... 0.8.1.0 ... Introduce Tapered Eval
08-18-2025 ... 0.8.1.1 ... Perftsuite, FRC Fixes, Specialize Search Functions, Start Datagen
09-15-2025 ... 0.8.2.0 ... Legal Move Generation ................ (5.6  +/- 9.6 ) , (8 + 0.08), (SPRT, 2850),(https://sscg13.pythonanywhere.com/test/1042/)
09-23-2025 ... 0.8.2.1 ... Data Generation
10-06-2025 ... 0.9.0.0 ... PSQT Tuning .......................... (324.4 +/- 65.1), (8 + 0.08), (N = 200), (Local)
10-06-2025 ... 0.9.1.0 ... PSQT Tuning 2 ........................ (156.6 +/- 29.9), (8 + 0.08), (N = 400), (Local)
10-08-2025 ... 0.9.2.0 ... PSQT Tuning 3 ........................ (54.7 +/- 19.1) , (8 + 0.08), (N = 800), (Local)
11-17-2025 ... 0.9.3.0 ... QS SEE Pruning ....................... (11.9 +/- 8.8)  , (8 + 0.08), (SPRT, 3184),(https://sscg13.pythonanywhere.com/test/1534/)
11-17-2025 ... 0.9.3.1 ... Makefile Build Compat Changes
11-22-2025 ... 1.0.0.0 ... NNUE ................................. (270.3 +/- 55.9), (8 + 0.08), (SPRT, 198), (https://sscg13.pythonanywhere.com/test/1571/)
11-23-2025 ... 1.0.1.0 ... Multithread Bookgen, L1 = 64 ......... (165.6 +/- 37.5), (8 + 0.08), (SPRT, 230), (https://sscg13.pythonanywhere.com/test/1575/)
11-24-2025 ... 1.0.1.1 ... Generation TT
11-25-2025 ... 1.0.2.0 ... Cubic Quiet History Bonus ............ (6.2 +/- 5.0)   , (8 + 0.08), (SPRT, 7148),(https://sscg13.pythonanywhere.com/test/1592/)
11-27-2025 ... 1.0.3.0 ... Internal Iterative Reductions ........ (13.1 +/- 9.0)  , (8 + 0.08), (SPRT, 2200),(https://sscg13.pythonanywhere.com/test/1603/)
11-27-2025 ... 1.0.4.0 ... Late Move Pruning .................... (6.1 +/- 4.9)   , (8 + 0.08), (SPRT, 7700),(https://sscg13.pythonanywhere.com/test/1606/)
